raffia/tests/error/scss/at-rule/mixin/double-commas-at-end.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `,`
  ┌─ double-commas-at-end.scss:1:33
  │
1 │ @mixin double-comma-error($a,$b,,) {
  │                                 ^


